--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Test</title>
 </head>
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+    <section>
+        <aside>
+            <a href="#none"></a>
+        </aside>
+    </section>
 </body>
 </html>
